# DataAlgorithm

./: CMakeLists.txt  README.md  exec.sh  main.cpp
ListAndArray/: CMakeLists.txt  lruList.cpp  lruVec.cpp  palindromic.cpp  palindromic.hpp  palindromic_test.cpp
